// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BMP fixtures > decodes and roundtrips bit1.bmp 1`] = `
{
  "bitPP": 1,
  "compress": 0,
  "fileName": "bit1.bmp",
  "firstPixelABGR": [
    0,
    255,
    255,
    255,
  ],
  "height": 100,
  "rawSize": 1602,
  "sampleABGR": [
    0,
    255,
    255,
    255,
    0,
    255,
    255,
    255,
    0,
    255,
    255,
    255,
    0,
    255,
    255,
    255,
    0,
    255,
    255,
    255,
  ],
  "width": 100,
}
`;

exports[`BMP fixtures > decodes and roundtrips bit4.bmp 1`] = `
{
  "bitPP": 4,
  "compress": 0,
  "fileName": "bit4.bmp",
  "firstPixelABGR": [
    0,
    255,
    255,
    255,
  ],
  "height": 100,
  "rawSize": 5202,
  "sampleABGR": [
    0,
    255,
    255,
    255,
    0,
    255,
    255,
    255,
    0,
    255,
    255,
    255,
    0,
    255,
    255,
    255,
    0,
    255,
    255,
    255,
  ],
  "width": 100,
}
`;

exports[`BMP fixtures > decodes and roundtrips bit4_RLE.bmp 1`] = `
{
  "bitPP": 4,
  "compress": 2,
  "fileName": "bit4_RLE.bmp",
  "firstPixelABGR": [
    255,
    255,
    255,
    255,
  ],
  "height": 100,
  "rawSize": 2622,
  "sampleABGR": [
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
  ],
  "width": 100,
}
`;

exports[`BMP fixtures > decodes and roundtrips bit8.bmp 1`] = `
{
  "bitPP": 8,
  "compress": 0,
  "fileName": "bit8.bmp",
  "firstPixelABGR": [
    0,
    255,
    255,
    255,
  ],
  "height": 100,
  "rawSize": 10002,
  "sampleABGR": [
    0,
    255,
    255,
    255,
    0,
    255,
    255,
    255,
    0,
    255,
    255,
    255,
    0,
    255,
    255,
    255,
    0,
    255,
    255,
    255,
  ],
  "width": 100,
}
`;

exports[`BMP fixtures > decodes and roundtrips bit8_RLE.bmp 1`] = `
{
  "bitPP": 8,
  "compress": 1,
  "fileName": "bit8_RLE.bmp",
  "firstPixelABGR": [
    255,
    255,
    255,
    255,
  ],
  "height": 100,
  "rawSize": 2974,
  "sampleABGR": [
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
  ],
  "width": 100,
}
`;

exports[`BMP fixtures > decodes and roundtrips bit16_565.bmp 1`] = `
{
  "bitPP": 16,
  "compress": 3,
  "fileName": "bit16_565.bmp",
  "firstPixelABGR": [
    0,
    248,
    252,
    248,
  ],
  "height": 100,
  "rawSize": 20002,
  "sampleABGR": [
    0,
    248,
    252,
    248,
    0,
    248,
    252,
    248,
    0,
    248,
    252,
    248,
    0,
    248,
    252,
    248,
    0,
    248,
    252,
    248,
  ],
  "width": 100,
}
`;

exports[`BMP fixtures > decodes and roundtrips bit16_a444.bmp 1`] = `
{
  "bitPP": 16,
  "compress": 3,
  "fileName": "bit16_a444.bmp",
  "firstPixelABGR": [
    0,
    240,
    240,
    240,
  ],
  "height": 100,
  "rawSize": 20002,
  "sampleABGR": [
    0,
    240,
    240,
    240,
    0,
    240,
    240,
    240,
    0,
    240,
    240,
    240,
    0,
    240,
    240,
    240,
    0,
    240,
    240,
    240,
  ],
  "width": 100,
}
`;

exports[`BMP fixtures > decodes and roundtrips bit16_a555.bmp 1`] = `
{
  "bitPP": 16,
  "compress": 3,
  "fileName": "bit16_a555.bmp",
  "firstPixelABGR": [
    0,
    248,
    248,
    248,
  ],
  "height": 100,
  "rawSize": 20002,
  "sampleABGR": [
    0,
    248,
    248,
    248,
    0,
    248,
    248,
    248,
    0,
    248,
    248,
    248,
    0,
    248,
    248,
    248,
    0,
    248,
    248,
    248,
  ],
  "width": 100,
}
`;

exports[`BMP fixtures > decodes and roundtrips bit16_x444.bmp 1`] = `
{
  "bitPP": 16,
  "compress": 3,
  "fileName": "bit16_x444.bmp",
  "firstPixelABGR": [
    0,
    240,
    240,
    240,
  ],
  "height": 100,
  "rawSize": 20002,
  "sampleABGR": [
    0,
    240,
    240,
    240,
    0,
    240,
    240,
    240,
    0,
    240,
    240,
    240,
    0,
    240,
    240,
    240,
    0,
    240,
    240,
    240,
  ],
  "width": 100,
}
`;

exports[`BMP fixtures > decodes and roundtrips bit16_x555.bmp 1`] = `
{
  "bitPP": 16,
  "compress": 0,
  "fileName": "bit16_x555.bmp",
  "firstPixelABGR": [
    0,
    248,
    248,
    248,
  ],
  "height": 100,
  "rawSize": 20002,
  "sampleABGR": [
    0,
    248,
    248,
    248,
    0,
    248,
    248,
    248,
    0,
    248,
    248,
    248,
    0,
    248,
    248,
    248,
    0,
    248,
    248,
    248,
  ],
  "width": 100,
}
`;

exports[`BMP fixtures > decodes and roundtrips bit24.bmp 1`] = `
{
  "bitPP": 24,
  "compress": 0,
  "fileName": "bit24.bmp",
  "firstPixelABGR": [
    0,
    255,
    255,
    255,
  ],
  "height": 100,
  "rawSize": 30002,
  "sampleABGR": [
    0,
    255,
    255,
    255,
    0,
    255,
    255,
    255,
    0,
    255,
    255,
    255,
    0,
    255,
    255,
    255,
    0,
    255,
    255,
    255,
  ],
  "width": 100,
}
`;

exports[`BMP fixtures > decodes and roundtrips bit32.bmp 1`] = `
{
  "bitPP": 32,
  "compress": 3,
  "fileName": "bit32.bmp",
  "firstPixelABGR": [
    0,
    255,
    255,
    255,
  ],
  "height": 100,
  "rawSize": 40002,
  "sampleABGR": [
    0,
    255,
    255,
    255,
    0,
    255,
    255,
    255,
    0,
    255,
    255,
    255,
    0,
    255,
    255,
    255,
    0,
    255,
    255,
    255,
  ],
  "width": 100,
}
`;

exports[`BMP fixtures > decodes and roundtrips bit32_alpha.bmp 1`] = `
{
  "bitPP": 32,
  "compress": 0,
  "fileName": "bit32_alpha.bmp",
  "firstPixelABGR": [
    0,
    255,
    255,
    255,
  ],
  "height": 100,
  "rawSize": 40002,
  "sampleABGR": [
    0,
    255,
    255,
    255,
    0,
    255,
    255,
    255,
    0,
    255,
    255,
    255,
    0,
    255,
    255,
    255,
    0,
    255,
    255,
    255,
  ],
  "width": 100,
}
`;
